@@ -883,3 +883,7 @@ intended use for this is in pre-release automated test suites.
 + Initial GUI text view task state filtering now shows all tasks, as
 users often forget which task states are filtered out.
 
++ The runahead limit now waits on waiting and running tasks (waiting alone
+is not enough to contstrain a single task cycling suite, in which
+successive instances all go off at once).
+
